# compute-test

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt
cmake/: compiler_settings.cmake
src/: CMakeLists.txt  main.cpp
